<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="sync_offline_files"
        android:summary="@string/pref_sync_offline_summary"
        android:title="@string/pref_sync_offline_title" />

    <PreferenceScreen
        android:key="ps_sessao_plenaria"
        android:title="@string/action_sessoes_plenarias">

        <SwitchPreference
            android:defaultValue="false"
            android:key="sync_roteiro_display"
            android:summary="@string/pref_sync_roteiro_summary"
            android:title="@string/pref_sync_roteiro_title" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="divisao_quizenal_display"
            android:summary="@string/pref_divisao_quinzenal"
            android:title="@string/pref_divisao_quinzenal_title" />



        <ListPreference
            android:defaultValue="10"
            android:entries="@array/items_titles_tipo_listagem_sessao_plenaria"
            android:entryValues="@array/items_values_tipo_listagem_sessao_plenaria"
            android:key="screen_list_sessao_plenaria"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_periodo_listagem" />


    </PreferenceScreen>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--

    This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines.
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference> -->

</PreferenceScreen>
