<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_cl_name_default"
        android:inputType="text"
        android:key="name_casa_legislativa"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_cl_name_title" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_cl_domain_default"
        android:inputType="text"
        android:key="domain_casa_legislativa"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_cl_domain_title" />

    <!--<SwitchPreference
    android:defaultValue="true"
    android:key="example_switch"
    android:summary="@string/pref_description_social_recommendations"
    android:title="@string/pref_title_social_recommendations" />

    &lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. &ndash;&gt;
    &lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
